grammar.txt
Program        ::= (Statement (";" | NEWLINE) )* Statement?
Statement      ::= Assignment | Expression

Assignment     ::= LValue "=" Expression
LValue         ::= Identifier
                 | Identifier "(" ParamList? ")"

Expression     ::= Conditional

Conditional    ::= LogicalOr ("?" Expression ":" Expression)?

LogicalOr      ::= LogicalAnd (("or" | "||") LogicalAnd)*
LogicalAnd     ::= Compare     (("and" | "&&") Compare)*

Compare        ::= Range (("==" | "!=" | "<" | "<=" | ">" | ">=") Range)*

Range          ::= AddSub (":" AddSub (":" AddSub)?)?
                  /*  a:b      or a:b:c  */

AddSub         ::= MulDiv (( "+" | "-" ) MulDiv)*

MulDiv         ::= Pow (( "*" | "/" | "%" | ".*" | "./" | ".%" ) Pow)*

Pow            ::= Unary ( ("^" | ".^") Unary )*
                  /* right-associative in evaluation */

Unary          ::= ( "+" | "-" | "not" | "!" ) Unary
                 | Postfix

Postfix        ::= Primary ( "!" | "'" )*
                  /* "!" factorial (postfix), "'" transpose */

Primary        ::= Number
                 | String
                 | Symbol
                 | Array
                 | FunctionCall
                 | Parenthesized
                 | UnitValue

FunctionCall   ::= Identifier "(" ArgList? ")"
                 | SummationCall

SummationCall  ::= "sigma" "(" Identifier "," Expression "," Expression "," Expression ")"
                  /* sigma(variable, start, end, expression) */

Parenthesized  ::= "(" Expression ")"

Array          ::= "[" (Expression ("," Expression)*)? "]"

UnitValue      ::= Number Unit
                 | "(" Expression ")" Unit
                 /* e.g., 2 cm, (3+4) N*m */

ParamList      ::= Identifier ("," Identifier)*
ArgList        ::= Expression ("," Expression)*

Symbol         ::= Identifier
Identifier     ::= Letter (Letter | Digit | "_")*
Number         ::= Digit+ ("." Digit+)? (("e"|"E") ("+"|"-")? Digit+)?
String         ::= "'" ( ~["'"] )* "'" | "\"" ( ~["\""] )* "\""

Letter         ::= "A".."Z" | "a".."z"
Digit          ::= "0".."9"
Unit           ::= Identifier ("/" Identifier | "*" Identifier)*
